# simple_cmake_android

./: .gitignore  README.md  build.sh
build_src/: CMakeLists.txt
build_src/src/: test_cross.c  test_cross.h
